# rusty_relaysms_payload_specs

./: .gitignore  Android.bp  Cargo.toml  LICENSE  Makefile  README.md
.cargo/: config.toml
src/: bit_utils.rs  contents.rs  email.rs  lib.rs  payloads.rs  transport.rs  transports.rs  utils.rs
src/contents/: contents_container.rs  email.rs
src/payloads/: image_seg_0.rs  payload_with_attachments.rs  payload_without_attachment.rs
src/transports/: transport_att.rs  transport_att_false.rs  transport_att_true.rs
tests/: email_test.rs  transport_test.rs
