[package]
name = "relaysms-specs"
version = "0.1.0"
edition = "2024"

[lib]
name="relaysms_spec_payload"
crate-type = ["cdylib"]

[dependencies]
rand = "0.10.1"
uniffi = { version = "0.31.1", features = ["cli"] }
thiserror = "2.0.18"

[build-dependencies]
uniffi = { version = "0.31.1", features = [ "build" ] }

